--- a/style.css
+++ b/style.css
@@ -7,4 +7,21 @@ body{
     position: absolute;
     left: -10px;
     top: -10px;
+    z-index: -1;
+}
+form {
+    z-index: 1;
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, .5);
+    padding: 20px;
+    border-radius: 3px;
+    border: 1px solid black;
+    margin: 20px auto;
+
+}
+input {
+    padding: 10px;
+    margin: 10px;
 }
