--- a/templates/cityTemplate.html
+++ b/templates/cityTemplate.html
@@ -1,4 +1,4 @@
-<form>
+<form class="form">
   <input ng-model="city1" type="text" placeholder="City">
   <input ng-model="city2" type="text" placeholder="City">
   <input ng-model="city3" type="text" placeholder="City">
