--- a/style.css
+++ b/style.css
@@ -16,12 +16,18 @@ form {
     flex-direction: column;
     background-color: rgba(255, 255, 255, .5);
     padding: 20px;
-    border-radius: 3px;
+    border-radius: 5px;
     border: 1px solid black;
     margin: 20px auto;
 
 }
 input {
-    padding: 10px;
+    padding: 5px;
     margin: 10px;
+}
+form button {
+    padding: 10px 0;
+    background-color: blue;
+    color: white;
+    border: none;
 }
