--- a/templates/cityTemplate.html
+++ b/templates/cityTemplate.html
@@ -1,8 +1,8 @@
 <form>
-  <input ng-model="city1" type="text" placeholder="City">
-  <input ng-model="city2" type="text" placeholder="City">
-  <input ng-model="city3" type="text" placeholder="City">
-  <input ng-model="city4" type="text" placeholder="City">
-  <input ng-model="city5" type="text" placeholder="City">
-  <button ng-click="findLongestName(city1, city2, city3, city4, city5)">Submit</button>
+  <input ng-model="$ctrl.city.city1" type="text" placeholder="City">
+  <input ng-model="$ctrl.city.city2" type="text" placeholder="City">
+  <input ng-model="$ctrl.city.city3" type="text" placeholder="City">
+  <input ng-model="$ctrl.city.city4" type="text" placeholder="City">
+  <input ng-model="$ctrl.city.city5" type="text" placeholder="City">
+  <button ng-click="$ctrl.findLongestName($ctrl.city)">Submit</button>
 </form>
