--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-body{
+body {
     overflow: hidden;
+    background-color: black;
 }
+
 #backGround {
     overflow: hidden;
     width: 102%;
@@ -9,6 +11,21 @@ body{
     top: -10px;
     z-index: -1;
 }
+.start {
+    width: 74px;
+    margin: 75px auto;
+    transform: translateX(-65%);
+}
+.start a{
+    font-family: 'Oswald', sans-serif;
+    font-size: 50px;
+    text-decoration: none;
+    color: white;
+    border: 2px solid white;
+    padding: 10px 20px;
+    text-shadow: -1px -1px 2px rgba(0,0,0,.3), 1px -1px 2px rgba(0,0,0,.3), -1px 1px 2px rgba(0,0,0,.3), 1px 1px 2px rgba(0,0,0,.3);
+}
+
 form {
     z-index: 1;
     width: 350px;
@@ -18,16 +35,67 @@ form {
     padding: 20px;
     border-radius: 5px;
     border: 1px solid black;
-    margin: 20px auto;
+    margin: 0 auto;
+}
 
-}
 input {
-    padding: 5px;
-    margin: 10px;
+    padding: 5px 5px;
+    margin: 8px 0;
 }
+
 form button {
-    padding: 10px 0;
+    padding: 12px 0;
     background-color: blue;
     color: white;
     border: none;
+    width: 100%;
+    margin-top: 10px;
+}
+
+#weather {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Oswald', sans-serif;
+    height: 300px;
+    margin-top: -35px;
+}
+
+#weatherTemp {
+    margin: 0;
+    padding: 0;
+    font-size: 175px;
+    text-align: center;
+    text-shadow: -1px -1px 1px rgba(0,0,0,.2), 1px -1px 1px rgba(0,0,0,.2), -1px 1px 1px rgba(0,0,0,.2), 1px 1px 1px rgba(0,0,0,.2);
+}
+
+.degreeSymbol {
+    font-size: 100px;
+    position: relative;
+    top: -75px;
+    left: -5px;
+}
+
+#flexMeBaby {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: -40px;
+    left: -60px;
+}
+
+.weatherInfo {
+    padding: 0;
+    margin: 0;
+    font-size: 24px;
+    font-weight: 400;
+    text-shadow: -1px -1px 1px rgba(0,0,0,.2), 1px -1px 1px rgba(0,0,0,.2), -1px 1px 1px rgba(0,0,0,.2), 1px 1px 1px rgba(0,0,0,.2);
+}
+#weather img {
+    position: relative;
+    top: -40px;
+    left: 50px;
+    width: 60px;
+
 }
