--- a/templates/city.template.html
+++ b/templates/city.template.html
@@ -1,8 +1,8 @@
+<weather-component></weather-component>
 <form>
   <input ng-model="$ctrl.city.city1" type="text" placeholder="City">
   <input ng-model="$ctrl.city.city2" type="text" placeholder="City">
   <input ng-model="$ctrl.city.city3" type="text" placeholder="City">
   <input ng-model="$ctrl.city.city4" type="text" placeholder="City">
-  <input ng-model="$ctrl.city.city5" type="text" placeholder="City">
-  <button ng-click="$ctrl.findLongestName($ctrl.city)">Submit</button>
+  <a href="#!/restart-component"><button ng-click="$ctrl.findLongestName($ctrl.city)">Submit</button></a>
 </form>
