--- a/templates/restart.template.html
+++ b/templates/restart.template.html
@@ -1,5 +1,5 @@
 <weather-component></weather-component>
 <div class="start">
-    <p>Longest City: {{ $ctrl.weatherData.city }}</p>
+    <p>Longest City: {{ $ctrl.weatherData }}</p>
     <a href="#!/city-form">RESTART</a>
 </div>
