--- a/style.css
+++ b/style.css
@@ -12,18 +12,22 @@ body {
     z-index: -1;
 }
 .start {
-    width: 74px;
+    width: 100px;
     margin: 75px auto;
     transform: translateX(-65%);
 }
 .start a{
-    font-family: 'Oswald', sans-serif;
-    font-size: 50px;
     text-decoration: none;
+    white-space: nowrap;
+}
+.start a button {
     color: white;
     border: 2px solid white;
     padding: 10px 20px;
+    font-size: 50px;
+    font-family: 'Oswald', sans-serif;
     text-shadow: -1px -1px 2px rgba(0,0,0,.3), 1px -1px 2px rgba(0,0,0,.3), -1px 1px 2px rgba(0,0,0,.3), 1px 1px 2px rgba(0,0,0,.3);
+    background-color: rgba(0,0,0,0);
 }
 
 form {
