weather on load

--- a/templates/start.template.html
+++ b/templates/start.template.html
@@ -1,4 +1,4 @@
 <weather-component></weather-component>
 <div class="start">
-    <a href="#!/city-form"><button ng-click="$ctrl.starter()">START</button></a>
+    <a href="#!/city-form"><button>START</button></a>
 </div>
