--- a/style.css
+++ b/style.css
@@ -105,5 +105,11 @@ form button {
 }
 .start p {
   color: white;
-  font-size: 20px;
+  font-size: 40px;
+  width:300px;
+  white-space: nowrap;
+  transform: translateX(-15%);
+  text-align: center;
+  text-shadow: -1px -1px 1px rgba(0,0,0,.3), 1px -1px 1px rgba(0,0,0,.3), -1px 1px 1px rgba(0,0,0,.3), 1px 1px 1px rgba(0,0,0,.3);
+
 }
