--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body {
 .start a{
     text-decoration: none;
     white-space: nowrap;
+    padding: 0;
+    margin:0;
 }
 .start a button {
     color: white;
